# programlama-lab-1-algoritma-araci

./: .gitignore  README.md  pyproject.toml
data/: giris_metni.txt
docs/: odev_aciklamasi.md
src/algoritma_araci/: __init__.py  algorithms.py  cli.py
tests/: test_algorithms.py
