[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algoritma-araci"
version = "1.0.0"
description = "Programlama Lab 1 için temel algoritmaları içeren Python konsol uygulaması"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Gürel Bilgin"},
    {name = "Berkay Aras"}
]
keywords = ["python", "algorithms", "cli", "programlama-lab"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
algoritma-araci = "algoritma_araci.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
